...
            self.overViewLabel.text = details.overview
            self.gendersLabel.text  = details.genresString
            self.languagesLabel.text = details.languagesString
    }
   
    @IBAction func showAction(_ sender: UIButton) {
        if showbtn.currentTitle == "Show full" {
            overViewLabelHeight.constant = overViewLabel.heightForView()
            mainScrollView.contentSize.height = view.frame.height+overViewLabel.heightForView()
            showbtn.setTitle("Show less", for: .normal)
        } else {
            overViewLabelHeight.constant = 50
            mainScrollView.contentSize.height = view.frame.height+50
            showbtn.setTitle("Show full", for: .normal)
        }
    }
...
