...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="x9y-FJ-OhY" id="e1s-ZF-c0W"/>
                            <outlet property="delegate" destination="x9y-FJ-OhY" id="YCy-2G-die"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Movies List" id="VTr-ju-c4M"/>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Xad-1N-z1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1978.4000000000001" y="122.78860569715144"/>
        </scene>
        <!--Movie Details View Controller-->
...
